Updated about us

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -94,15 +94,9 @@
 		============================================= -->
 		<section id="content">
 
-			<!-- <div class="content-wrap"> -->
-			
-			<div id="section-faqs" class="page-section"></div>
-				
-				<div class="heading-block topmargin noborder">
-					<h2 class="center">FAQS</h2>
-				</div>
+			<div class="content-wrap">
 
-				<!-- <div class="container clearfix"> -->
+				<div class="container clearfix">
 					
 					<!-- Post Content
 					============================================= -->
@@ -157,6 +151,10 @@
 						</div>
 
 					</div><!-- .postcontent end -->
+
+				</div>
+
+			</div>
 			
 			<div class="content-wrap">
 
@@ -170,7 +168,7 @@
 
 						<div id="accordion2" role="tablist">
 							<div class="card">
-								<div class="card-header" role="tab" id="heading2">
+								<div class="card-header" role="tab" id="heading2One">
 									<h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 											Where does the data pull from?
@@ -178,35 +176,35 @@
 									</h5>
 								</div>
 
-								<div id="collapse1" class="collapse show" role="tabpanel" aria-labelledby="heading1" data-parent="#accordion">
+								<div id="collapse2One" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 									<div class="card-body">
 										The data is pulled from the website HAR and it is rendered in an automatic script. The script runs every day and pulls the latest information from the house listings.
 									</div>
 								</div>
 							</div>
 							<div class="card">
-								<div class="card-header" role="tab" id="heading2b">
+								<div class="card-header" role="tab" id="heading2Two">
 									<h5 class="mb-0">
 										<a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 											How long do the listings stay on the website?
 										</a>
 									</h5>
 								</div>
-								<div id="collapse2" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
+								<div id="collapse2Two" class="collapse" role="tabpanel" aria-labelledby="heading2Two" data-parent="#accordion">
 									<div class="card-body">
 										You will be able to find the listings for the last 6 months. Since new listings show up every day they will be added to the list.
 									</div>
 								</div>
 							</div>
 							<div class="card">
-								<div class="card-header" role="tab" id="heading3">
+								<div class="card-header" role="tab" id="heading2Three">
 									<h5 class="mb-0">
 										<a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 											Are the neighborhoods selected for this analysis included in the buyout program?
 										</a>
 									</h5>
 								</div>
-								<div id="collapse3b" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
+								<div id="collapse2Three" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
 									<div class="card-body">
 										Yes, the zones for the buyout program include sections of the neighborhoods that are part of this research. The entirety of the neighborhoods may not be included in the HCFCD program but homes in those specific neighborhoods are sought after for buyout.
 									</div>
@@ -217,7 +215,7 @@
 					</div><!-- .postcontent end -->
 
 				</div>
-				
+
 			</div>
 
 		</section><!-- #content end -->
