--- a/templates/forecasting.html
+++ b/templates/forecasting.html
@@ -132,7 +132,7 @@
 				<h2 class="center">FORECASTING</h2>
 			</div> -->
 					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau1" width="1400" height="1400" style="text-align: center"></iframe></p>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau1" width="1400" height="1500" style="text-align: center"></iframe></p>
 				
 				<!-- </div>
 
@@ -140,7 +140,7 @@
 
 		</section><!-- #content end -->
 
-		<!-- Footer
+		<!-- Footerg
 		============================================= -->
 		<footer id="footer" class="dark">
 
