--- a/templates/county.html
+++ b/templates/county.html
@@ -4,11 +4,13 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
 
 	<!-- Stylesheets
 	============================================= -->
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
-		  rel="stylesheet" type="text/css" />
+	<link
+	href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
+	rel="stylesheet" type="text/css" />
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
@@ -31,11 +33,6 @@
 	
 	<!-- Bootstrap Data Table Plugin -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bs-datatable.css') }}">
-	
-	<!-- Tableau CSS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style2.css') }}">
-    <script src="https://d3js.org/d3.v5.min.js"></script>
 	
 	<!-- Document Title
 	============================================= -->
@@ -68,7 +65,7 @@
 								alt="Logo"></a>
 					</div><!-- #logo end -->
 
-					<!-- Primary Navigation
+				<!-- Primary Navigation
 					============================================= -->
 					<nav id="primary-menu" class="style">
 						
@@ -98,20 +95,33 @@
 		============================================= -->
 		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }}); padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
-			<div class="container clearfix">
-				<h1 data-animate="fadeInUp" data-delay="400">County</h1>
+			<div class="container clearfix">County</h1>
 				<span data-animate="fadeInUp" data-delay="300"></span>
 			</div>
 
 		</section><!-- #page-title end -->
 
-		<!-- Tableau Code
+		<!-- Content
 		============================================= -->
-		<!--<div class='tableauPlaceholder center' id='viz1560727770291' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2C&#47;2C6B9T2BD&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;2C6B9T2BD' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;2C&#47;2C6B9T2BD&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>   
+		<section id="content">
+
+			<!--<div class="content-wrap">
+
+				<div class="container clearfix"> -->
+			
+			<div id="section-forecasting" class="page-section"></div>
+						
+			<!--<div class="heading-block topmargin noborder">
+				<h2 class="center">NEIGHBORHOODS</h2>
+			</div> -->
 					
-		<script type='text/javascript'>                    var divElement = document.getElementById('viz1560727770291');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1200px';vizElement.style.height='1427px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1200px';vizElement.style.height='1427px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);   </script><!-- #Tableau end-->
-					
-		<!-- #Tabuleau end -->
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau4" width="1280" height="1600" style="text-align: center"></iframe></p>
+				
+				<!-- </div>
+
+			</div> -->
+
+		</section><!-- #content end -->g
 
 		<!-- Footer
 		============================================= -->
