Updated county file

--- a/templates/county.html
+++ b/templates/county.html
@@ -9,8 +9,8 @@
 	<!-- Stylesheets
 	============================================= -->
 	<link
-	href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
-	rel="stylesheet" type="text/css" />
+		href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i"
+		rel="stylesheet" type="text/css" />
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
@@ -95,7 +95,8 @@
 		============================================= -->
 		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }}); padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 
-			<div class="container clearfix">County</h1>
+			<div class="container clearfix">
+				<h1 data-animate="fadeInUp" data-delay="400">County</h1>
 				<span data-animate="fadeInUp" data-delay="300"></span>
 			</div>
 
@@ -109,19 +110,19 @@
 
 				<div class="container clearfix"> -->
 			
-			<div id="section-forecasting" class="page-section"></div>
+			<div id="section-county" class="page-section"></div>
 						
-			<!--<div class="heading-block topmargin noborder">
-				<h2 class="center">NEIGHBORHOODS</h2>
+			<!-- <div class="heading-block topmargin noborder">
+				<h2 class="center"> HARRIS &nbsp;COUNTY</h2>
 			</div> -->
-					
-				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau4" width="1280" height="1600" style="text-align: center"></iframe></p>
+			
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau3" width="1280" height="1600" style="text-align: center"></iframe></p>
 				
 				<!-- </div>
 
 			</div> -->
 
-		</section><!-- #content end -->g
+		</section><!-- #content end -->
 
 		<!-- Footer
 		============================================= -->
