--- a/templates/county.html
+++ b/templates/county.html
@@ -108,11 +108,10 @@
 			
 			<div id="section-county" class="page-section"></div>
 			
-			<p align="center">
+			<div align="center">
 					
 				<!-- Tableau
 				============================================= -->
-				
 				<div class='tableauPlaceholder' id='viz1561933481644' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7Q&#47;7Q64JS69G&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;7Q64JS69G' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7Q&#47;7Q64JS69G&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>
 			
 				<script type='text/javascript'>                    
@@ -124,11 +123,11 @@
 					var scriptElement = document.createElement('script');           
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-				</script>
+				</script><!-- #Tableau end -->
 					
 				<!-- <iframe src="//county-flood-control.herokuapp.com/tableau3" width="1280" height="1600" style="text-align: center"></iframe> -->
 				
-			</p>
+			</div>
 
 		</section><!-- #content end -->
 
