Updated county file

--- a/templates/county.html
+++ b/templates/county.html
@@ -106,8 +106,6 @@
 		============================================= -->
 		<section id="content">
 			
-			<div id="section-county" class="page-section"></div>
-			
 			<div align="center">
 					
 				<!-- Tableau
@@ -125,8 +123,6 @@
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 				</script><!-- #Tableau end -->
 					
-				<!-- <iframe src="//county-flood-control.herokuapp.com/tableau3" width="1280" height="1600" style="text-align: center"></iframe> -->
-				
 			</div>
 
 		</section><!-- #content end -->
@@ -135,14 +131,8 @@
 		============================================= -->
 		<footer id="footer" class="dark">
 
-			<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url({{ url_for('static', filename='images/page-header-test.jpg') }}); padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
-
-			<div class="container clearfix">
-				<h1 data-animate="fadeInUp" data-delay="400">Neighborhoods</h1>
-				<span data-animate="fadeInUp" data-delay="300"></span>
-			</div>
-
-		</section><!-- #page-title end -->
+			<!-- Copyrights
+			============================================= -->
 			<div id="copyrights">
 
 				<div class="container clearfix">
@@ -160,6 +150,9 @@
 		</footer><!-- #footer end -->
 
 	</div><!-- #wrapper end -->
+
+	<!-- Go To Top
+	============================================= -->
 
 	<!-- Go To Top
 	============================================= -->
