--- a/templates/analytics2.html
+++ b/templates/analytics2.html
@@ -102,11 +102,8 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="dashboard"><div>DASHBOARD</div></a></li>
+							<li class="current"><a href="dashboard"><div>DASHBOARD</div></a></li>
 							<li><a href="forecasting"><div>FORECASTING</div></a></li>
-							<!--
-							<li><a href="story"><div>STORY</div></a></li>
-							-->
 						</ul>
 					</nav>
 
@@ -120,26 +117,23 @@
 
 		<!-- Content
 		============================================= -->
-		<section id="content">
+		<section id="content">ti
+
+			<!--<div class="content-wrap">
+
+				<div class="container clearfix"> -->
 			
-			<div align="center">
+			<div id="section-analytics" class="page-section"></div>
+						
+			<!-- <div class="heading-block topmargin noborder">
+				<h2 class="center">DASHBOARD</h2>
+			</div> -->
 					
-				<!-- Tableau
-				============================================= -->
-				<div class='tableauPlaceholder' id='viz1561933481644' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7Q&#47;7Q64JS69G&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;7Q64JS69G' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7Q&#47;7Q64JS69G&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>
-			
-				<script type='text/javascript'>                    
-				var divElement = document.getElementById('viz1561933481644');                    
-				var vizElement = divElement.getElementsByTagName('object')[0];     	
-					if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
-					else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
-					else { vizElement.style.width='100%';vizElement.style.height='100%';}                     
-					var scriptElement = document.createElement('script');           
-					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-				</script><!-- #Tableau end -->
-					
-			</div>
+				<p align="center"><iframe src="//county-flood-control.herokuapp.com/tableau2" width="1280" height="1800" style="text-align: center"></iframe></p>
+				
+				<!-- </div>
+
+			</div> -->
 
 		</section><!-- #content end -->
 
